@@ -1,3 +1,11 @@
+2010-06-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Enhance the `sep' demo.
+
+	* demo/sep.c: Test more combinations of policies. Also test
+	allocation of shared and exclusive places. Use exclusive creates
+	for allocations/deallocations.
+
 2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Enhance the `tmalloc' demo.
